--- a/style/3-header.css
+++ b/style/3-header.css
@@ -1,5 +1,5 @@
 .logo{
-    background: url(/Projects/AirBnB_clone/web_static/images/logo.png) no-repeat center;
+    background: url(/Projects/badrbnh.github.io/images/logo.png) no-repeat center;
     padding-left: 20px;
     height: 60px;
     width: 120px;
