--- a/styles/3-header.css
+++ b/styles/3-header.css
@@ -1,5 +1,5 @@
 .logo{
-    background: url(/../badrbnh.github.io/images/logo.png) no-repeat center;
+    background: url(/badrbnh.github.io/images/logo.png) no-repeat center;
     padding-left: 20px;
     height: 60px;
     width: 120px;
