--- a/100-places.css
+++ b/100-places.css
@@ -148,7 +148,7 @@
   margin-right: 5px;
 }
 .wifi-icon {
-  background: url(/images/icon_wifi.png)
+  background: url(images/icon_wifi.png)
     no-repeat center;
   background-size: contain;
   width: 25px;
