--- a/6-filters.css
+++ b/6-filters.css
@@ -23,11 +23,14 @@ button:hover {
   opacity: 90%;
 }
 
+.filter-title{
+  margin-top: 30px;
+}
 .popover-ulist {
-  list-style-type: none;
   padding-top: 30px;
 }
 .popover-list {
+  list-style-type: none;
   padding-left: 30px;
   padding-top: 5px;
 }
